# takanashi-hoshino-realtime-voice-lab

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements-api.txt
api/: server.py
configs/: chat_tts_config.json  chat_tts_config.json.example  deepseek_api_key.txt.example  hoshino_lofi_prompt.txt  rvc_first_run.md  rvc_requirements_no_fairseq.txt
docs/: 01_project_plan.md  02_dataset_requirements.md  03_api_contract.md  04_training_runbook.md  05_naturalness_tuning.md  06_resume_soft_training.md  07_chill_voice_audit.md  08_hoshino_jp_audit.md  09_chat_tts_api.md  10_realtime_voice.md  11_open_webui_cn.md  12_reproducible_setup_cn.md
scripts/: audit_dataset.py  bootstrap.ps1  build_rvc_index.ps1  build_rvc_index.py  check_training_status.ps1  create_hoshino_jp_daily_manifest.py  create_soft_manifest.py  doctor.ps1  download_rvc_models.ps1  make_rvc_filelist.py  make_sapi_tts.ps1  prepare_voice_dataset.py  run_rvc_train_only.ps1  run_rvc_training.ps1  rvc_convert.ps1  setup_rvc_env.ps1  start_api.ps1  start_formal_training.ps1  start_rvc_webui.ps1
snapshots/lazy_na_tail_20260617_005/: hoshino_lofi_prompt.txt  server.py
web/: realtime.html
