[project]
name = "takanashi-hoshino-realtime-voice-lab"
version = "0.2.0"
description = "小鸟游星野 Realtime Voice Lab: local realtime ASR, character chat, TTS, and RVC voice conversion."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi",
  "uvicorn",
  "python-multipart",
  "edge-tts",
  "faster-whisper",
  "soundfile",
  "scipy"
]
